--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -9,9 +9,8 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "\n",
     "import ipywidgets as widgets\n",
-    "from IPython.display import display, clear_output"
+    "from IPython.display import display, clear_output\n"
    ]
   },
   {
@@ -163,7 +162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e5234e86d9646d2ab03963010739f27",
+       "model_id": "0ada742584b34bd1b226ce9ee412242d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,8 +181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "according-supervisor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip freeze > requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75aebdff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -205,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
